refactor(config): 优化应用配置和代码实现